--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@
       flex-direction: column; 
       align-items: center; 
       padding: 20px;
+      background-color: rgb(50, 50, 50);
+      color: azure;
     }
     img {
       max-width: 350px;
